Moved to split button  - also added sort to formula export

--- a/pyMAW.extension/pyMAW.tab/Notepad++.panel/bundle.yaml
+++ b/pyMAW.extension/pyMAW.tab/Notepad++.panel/bundle.yaml
@@ -1,6 +1,6 @@
 title: Notepad++
 layout:
   - Notepad++
-  - Notepadpp1
-  - Sharedparameters
+  - ExportToNpp
+  - OpenNotepadpp
   - NotepadppConfig
