Added pyMAW buttons for opening additional support files

--- a/pyMAW.extension/pyMAW.tab/Notepad++.panel/OpenNotepadpp.splitbutton/bundle.yaml
+++ b/pyMAW.extension/pyMAW.tab/Notepad++.panel/OpenNotepadpp.splitbutton/bundle.yaml
@@ -1,5 +1,11 @@
 title:
- en_us: Open N++
+ en_us: Open Notepad++
 layout:
  - Keynote
  - SharedParameters
+ - RevitINIUser
+ - RevitINIDefault
+ - KeyboardShortcuts
+ - RevitServer
+ - IFCCategories
+ - Journal
