--- a/pyMAW.extension/pyMAW.tab/Notepad++.panel/ExportToNpp.splitbutton/bundle.yaml
+++ b/pyMAW.extension/pyMAW.tab/Notepad++.panel/ExportToNpp.splitbutton/bundle.yaml
@@ -1,6 +1,7 @@
 layout:
  - ExportFamilyParameters
  - ExportSharedParameters
+ - ExportTypeCatalog
  - ExportFillPatterns
  - ExportKeynotes
  - ExportRevitServer
