Added fix for API changes to ParameterTypes, added export of loaded family shared parameters and project parameters.

--- a/pyMAW.extension/pyMAW.tab/Notepad++.panel/ExportToNpp.splitbutton/bundle.yaml
+++ b/pyMAW.extension/pyMAW.tab/Notepad++.panel/ExportToNpp.splitbutton/bundle.yaml
@@ -1,6 +1,8 @@
 layout:
  - ExportFamilyParameters
  - ExportSharedParameters
+ - ExportProjectParameters
+ - ExportLoadedFamilyParameters
  - ExportTypeCatalog
  - ExportFillPatterns
  - ExportKeynotes
