--- a/pyMAW.extension/pyMAW.tab/Notepad++.panel/OpenNotepadpp.splitbutton/bundle.yaml
+++ b/pyMAW.extension/pyMAW.tab/Notepad++.panel/OpenNotepadpp.splitbutton/bundle.yaml
@@ -6,6 +6,7 @@ layout:
  - RevitINIUser
  - RevitINIDefault
  - KeyboardShortcuts
+ - DynamoSettings
+ - Journal
  - RevitServer
  - IFCCategories
- - Journal
